force-app/main/default/objects/ssot__AssetActionSource__dlm/fields/ssot__ActualTaxAmout__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActualTaxAmout__c</fullName>
    <label>Actual Tax Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActualTaxAmout</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>