force-app/main/default/objects/ssot__AssetActionSource__dlm/fields/ssot__AssetSalesActionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssetSalesActionId__c</fullName>
    <label>Asset Sales Action</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssetSalesActionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>