force-app/main/default/objects/ssot__AssetActionSource__dlm/fields/ssot__PeriodBoundaryStartMonth__c.field-meta.xml
<CustomField>
    <fullName>ssot__PeriodBoundaryStartMonth__c</fullName>
    <label>Period Boundary Start Month</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PeriodBoundaryStartMonth</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>