force-app/main/default/objects/ssot__AssetActionSource__dlm/fields/ssot__rel_1719819541531_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819541531_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssetActionSource_SalesModelId_map_S_rel</label>
    <referenceTo>ssot__SalesModel__dlm</referenceTo>
    <relationshipLabel>AssetActionSource_SalesModelId_map_S_rel</relationshipLabel>
    <relationshipName>rel_1719819541531_end</relationshipName>
    <type>Lookup</type>
</CustomField>