force-app/main/default/objects/ssot__AssetActionSource__dlm/fields/ssot__TransactionDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__TransactionDateTime__c</fullName>
    <label>Transaction Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TransactionDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>